--- a/projects.html
+++ b/projects.html
@@ -6,102 +6,229 @@
   <title>Projects | Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Poppins", Arial, sans-serif;
       margin: 0;
       padding: 0;
       background-color: #e3f2f2;
       color: #333;
     }
-    header {
-      background: linear-gradient(135deg, #9bc4c2, #70a9a1);
-      color: white;
-      text-align: center;
-      padding: 60px 20px;
-      border-bottom: 5px solid #568d87;
-    }
     nav {
       background-color: #70a9a1;
-      padding: 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      padding: 15px 30px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav .logo {
+      font-size: 1.5em;
+      font-weight: bold;
+      color: white;
     }
     nav a {
       color: white;
       text-decoration: none;
-      margin: 0 10px;
-      font-weight: bold;
+      margin-left: 20px;
+      font-weight: 600;
+      transition: color 0.3s;
     }
-    .container {
-      padding: 20px;
-      max-width: 1100px;
+    nav a:hover {
+      color: #e0fffa;
+    }
+    header {
+      background: linear-gradient(135deg, #9bc4c2, #70a9a1);
+      color: white;
+      text-align: center;
+      padding: 70px 20px;
+      border-bottom: 5px solid #568d87;
+    }
+    header h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 1.2em;
+      max-width: 700px;
       margin: auto;
     }
-    h1, h2 {
+    .container {
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    .projects {
+      margin-bottom: 60px;
+    }
+    .projects h2 {
+      text-align: center;
       color: #204e4e;
+      margin-bottom: 25px;
     }
     .card {
       background: white;
-      padding: 15px;
+      border-radius: 10px;
+      padding: 20px;
       margin: 15px 0;
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+    .card img {
+      width: 60px;
+      height: 60px;
       border-radius: 8px;
+    }
+    .card h3 {
+      color: #204e4e;
+      margin: 0;
+    }
+    .skills {
+      margin-top: 40px;
+    }
+    .skills h2 {
+      text-align: center;
+      color: #204e4e;
+      margin-bottom: 20px;
+    }
+    .skills ul {
+      list-style: square;
+      max-width: 700px;
+      margin: auto;
+      background: white;
+      border-radius: 10px;
+      padding: 25px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-    .icon {
-      width: 40px;
-      height: 40px;
-      vertical-align: middle;
-      margin-right: 10px;
+    .skills li {
+      margin-bottom: 10px;
+    }
+    .contact {
+      text-align: center;
+      background-color: #70a9a1;
+      color: white;
+      padding: 40px 20px;
+      border-top: 5px solid #568d87;
+    }
+    .contact p {
+      margin: 5px 0;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      background-color: #568d87;
+      color: white;
+      font-size: 0.9em;
     }
   </style>
 </head>
 <body>
+
   <nav>
     <div class="logo">My Portfolio</div>
     <div>
-      <a href="about.html">About Me</a>
+      <a href="index.html">About Me</a>
       <a href="projects.html">Projects</a>
     </div>
   </nav>
 
   <header>
-    <h1>My Creative & Technical Projects</h1>
-    <p>Bringing ideas to life through code, design, and innovation.</p>
+    <h1>My Projects & Skills</h1>
+    <p>Bringing creativity, logic, and purpose together through code and design.</p>
   </header>
 
   <div class="container">
-    <h1>My Projects</h1>
+    <section class="projects">
+      <h2>My Creative & Technical Work</h2>
 
-    <div class="card">
-      <img src="https://image2url.com/images/1764167060272-206f1212-ea5c-4f85-a075-7ebcd2dd5a1e.jpg" alt="Canva Poster" class="icon" />
-      <h2>Canva Poster: Human vs AI</h2>
-      <p>Created a visually impactful poster on the theme <strong>“Human vs AI”</strong> using Canva. It reflects the harmonious coexistence between humananity and technology, set against a magical, celestial backdrop .</p>
-    </div>
-
-    <div class="card">
-      <img src="https://image2url.com/images/1764167089617-f7a621fa-9de7-4927-8667-be91e00ddd84.jpg" alt="Scratch Game" class="icon" />
-      <h2>Scratch Game</h2>
-      <p>Designed an interactive and fun game using Scratch, combining logic, animation, and event-driven interactions to engage players in a colorful digital experience, highlighting the pollution problem</p>
-    </div>
-
-    <div class="card">
-      <img src="https://image2url.com/images/1764167030406-8624bb51-12d3-4e57-be81-7e1b3867b7b8.jpg" alt="Library Management System" class="icon" />
-      <h2>Library Management System (C++)</h2>
-      <p>Developed a console-based Library Management System using C++. It efficiently manages book records with features like addition, search, and deletion, emphasizing structured, object-oriented programming techniques.</p>
-    </div>
-
-    <div class="card">
-      <img src="https://image2url.com/images/1764167121701-a9a63571-5371-4ce1-a7c3-c7e9346c48cd.jpg" alt="Portfolio Website" class="icon" />
-      <h2>Portfolio Website</h2>
-      <p>Built this two-page portfolio website using HTML and CSS. The teal color scheme, card layout, and icons represent my minimalist yet modern approach to web design.</p>
-    </div>
-
-    <div class="card">
-      <h2>Contact Me</h2>
-      <p>Email: salehaalii@gmail.com</p>
-      <p>Location: Lahore, Pakistan</p>
-      <p>Availability: Immediate</p>
-    </div>
+      <div class="card">
+  <img src="https://image2url.com/images/1764167060272-206f1212-ea5c-4f85-a075-7ebcd2dd5a1e.jpg" alt="Canva Poster" />
+  <div>
+    <h3>
+      <a href="file:///C:/Users/HP/Desktop/poster.pdf" target="_blank" style="color: #204e4e; text-decoration: underline;">
+        Canva Poster: Human vs AI
+      </a>
+    </h3>
+    <p>A conceptual poster that visualizes harmony between human and artificial intelligence.</p>
   </div>
+</div>
+
+
+
+      <div class="card">
+  <img src="https://image2url.com/images/1764167089617-f7a621fa-9de7-4927-8667-be91e00ddd84.jpg" alt="Scratch Game" />
+  <div>
+    <h3>
+      <a href="https://www.youtube.com/watch?v=E5oqpQ5m6Vw" target="_blank" style="color: #204e4e; text-decoration: underline;">
+        Scratch Game
+      </a>
+    </h3>
+    <p>Designed an engaging game on pollution awareness using Scratch’s event-driven features.</p>
+  </div>
+</div>
+
+
+      <div class="card">
+  <img src="https://image2url.com/images/1764167030406-8624bb51-12d3-4e57-be81-7e1b3867b7b8.jpg" alt="Library System" />
+  <div>
+    <h3>
+      <a href="https://code.visualstudio.com/docs/languages/cpp" target="_blank" style="color: #204e4e; text-decoration: underline;">
+        Library Management System (C++)
+      </a>
+    </h3>
+    <p>A C++ console app managing library records using object-oriented programming.</p>
+  </div>
+</div>
+
+
+      <div class="card">
+  <img src="https://image2url.com/images/1764167121701-a9a63571-5371-4ce1-a7c3-c7e9346c48cd.jpg" alt="Portfolio Website" />
+  <div>
+    <h3>
+      <a href="https://salehaaalii.github.io/Portfolio/" target="_blank" style="color: #204e4e; text-decoration: underline;">
+        Portfolio Website
+      </a>
+    </h3>
+    <p>This portfolio itself — a minimalist yet modern design showcasing my work and skills.</p>
+  </div>
+</div>
+
+
+    <section class="skills">
+      <h2>Core Skills Overview</h2>
+      <ul>
+        <li>Programming: C, C++, Web Development</li>
+        <li>Problem Solving & Logical Thinking</li>
+        <li>Digital Art, Painting, Sketching</li>
+        <li>Reading, Chess, and Creative Writing</li>
+      </ul>
+    </section>
+  </div>
+
+   <section class="contact">
+  <h2>Contact Me</h2>
+  <p>
+    <strong>Email:</strong>
+    <a href="https://www.youtube.com/watch?v=7SxN8s-BX1Q" target="_blank" style="color: #e0fffa; text-decoration: underline; font-weight: bold;">
+      salehaalii@gmail.com
+    </a>
+  </p>
+  <p><strong>Location:</strong> Lahore, Pakistan</p>
+  <p><strong>Availability:</strong> Immediate</p>
+</section>
+
+
+
+  <footer>
+    © 2025 My Portfolio 
+  </footer>
+
 </body>
 </html>
